# lol_data

./: Makefile  README.md  champions.pro  flake.nix  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  riotdata.json  test.cpp
code/: main.cpp  mainwindow.cpp  riotdata.json
code/api/: .env  main.py
code/realtime-match/: CMakeLists.txt  champion_class.cpp  league_client  liveclient.cpp  liveclientdata_sample.json  lockfile  test.cpp  todo
header/: champions.h  mainwindow.h
